k8s/namespace-paytogether.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paytogether
  labels:
    name: paytogether
