k8s/redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: paytogether
spec:
  redirectScheme:
    scheme: https
    permanent: true
