k8s/deployment-bff-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deploiement
  namespace: paytogether
  labels:
    app: bff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - name: bff
          image: docker.io/14152021/dealtogether:bff-latest
          ports:
            - containerPort: 8080
          # Injecter les secrets en tant que variables d'environnement
          volumeMounts:
            - name: config-volume
              mountPath: /config/application.yml
              subPath: application.yml
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: config-volume
          configMap:
            name: bff-config
            items:
              - key: application.properties
                path: application.properties
