k8s/deployment-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deploiement
  namespace: paytogether
  labels:
    app: bff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
      annotations:
        # Annotations pour que Prometheus découvre et scrape ce pod
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: bff
          image: docker.io/14152021/dealtogether:bff-v1.0.63
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
