k8s/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploiement
  namespace: paytogether
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: docker.io/14152021/dealtogether:front-v1.0.30
          ports:
            - containerPort: 80
