k8s/service-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: paytogether
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
    - name: transport
      port: 9300
      targetPort: 9300
      protocol: TCP
  sessionAffinity: None
