k8s/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: paytogether
  labels:
    app: front
spec:
  type: LoadBalancer
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
