k8s/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: paytogether
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dealtogether.ca
    secretName: front-tls
  rules:
  - host: dealtogether.ca
    http:
      paths:
      - path: /
 #       pathType: ImplementationSpecific
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 9003
