k8s/ingress-registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: paytogether
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: registry.dealtogether.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
